--- a/demo_getx/pubspec.yaml
+++ b/demo_getx/pubspec.yaml
@@ -26,6 +26,7 @@ dependencies:
   cupertino_icons: ^1.0.0
   english_words: ^3.1.5
   get: ^3.17.1
+  shared_preferences: ^0.5.12+4
 
 dev_dependencies:
   flutter_test:
