--- a/flutter_dio/pubspec.yaml
+++ b/flutter_dio/pubspec.yaml
@@ -23,10 +23,10 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  dio: 3.0.9
-  json_annotation: ^2.0.0
-  shared_preferences: ^0.5.7+3
-  connectivity: ^0.4.8+6
+  dio: ^4.0.0
+  json_annotation: ^4.0.1
+  shared_preferences: ^2.0.5
+  connectivity: ^3.0.3
 
 
   # The following adds the Cupertino Icons font to your application.
@@ -36,8 +36,8 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  build_runner: ^1.0.0
-  json_serializable: ^2.0.0
+  build_runner: ^1.12.2
+  json_serializable: ^4.1.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
