--- a/dio_new/example/pubspec.yaml
+++ b/dio_new/example/pubspec.yaml
@@ -1,4 +1,4 @@
-name: demo_getx
+name: example
 description: A new Flutter project.
 
 # The following line prevents the package from being accidentally published to
@@ -23,10 +23,12 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  cupertino_icons: ^1.0.0
-  english_words: ^3.1.5
-  get: 
-  shared_preferences: ^0.5.12+4
+  dio_new:
+    path: ../
+  get: ^4.1.4
+  # The following adds the Cupertino Icons font to your application.
+  # Use with the CupertinoIcons class for iOS style icons.
+  cupertino_icons: ^1.0.2
 
 dev_dependencies:
   flutter_test:
@@ -34,6 +36,7 @@ dev_dependencies:
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
+
 # The following section is specific to Flutter.
 flutter:
 
@@ -42,19 +45,17 @@ flutter:
   # the material Icons class.
   uses-material-design: true
 
-  assets:
-    # assets-generator-begin
-    # assets/img/*
-    - assets/img/girl.jpg
-    # assets-generator-end  
   # To add assets to your application, add an assets section, like this:
   # assets:
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
+
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
+
   # For details regarding adding assets from package dependencies, see
   # https://flutter.dev/assets-and-images/#from-packages
+
   # To add custom fonts to your application, add a fonts section here,
   # in this "flutter" section. Each entry in this list should have a
   # "family" key with the font family name, and a "fonts" key with a
