--- a/demo_getx/pubspec.yaml
+++ b/demo_getx/pubspec.yaml
@@ -18,15 +18,15 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.7.0 <3.0.0"
+  sdk: ">=2.12.0 <3.0.0"
 
 dependencies:
   flutter:
     sdk: flutter
-  cupertino_icons: ^1.0.0
-  english_words: ^3.1.5
-  get: 
-  shared_preferences: ^0.5.12+4
+  cupertino_icons: ^1.0.3
+  english_words: ^4.0.0
+  get:
+  shared_preferences: ^2.0.6
 
 dev_dependencies:
   flutter_test:
