--- a/dio_new/example/pubspec.yaml
+++ b/dio_new/example/pubspec.yaml
@@ -26,6 +26,8 @@ dependencies:
   dio_new:
     path: ../
   get: ^4.1.4
+  shared_preferences:
+
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
